# warmwinter-sdk

./: .gitignore  PUBLISHING.md  README.md  RECIPES.md
.github/workflows/: publish.yml
python/: LICENSE  README.md  pyproject.toml  warmwinter.py
typescript/: README.md  package-lock.json  package.json  tsconfig.json  warmwinter.ts
